--- a/front-end/package.json
+++ b/front-end/package.json
@@ -14,11 +14,12 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
-    "ably": "^1.2.30",
+    "@stomp/stompjs": "^7.0.0",
     "pinia": "^2.0.23",
     "uuid": "^9.0.0",
     "vue": "^3.2.40",
-    "vue-router": "^4.1.5"
+    "vue-router": "^4.1.5",
+    "ws": "^8.14.2"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.2.0",
